[tool.poetry]
name = "kinderlink"
version = "0.1.0"
description = ""
authors = ["Sean Harris"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.12.0"
sqlalchemy = "^2.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
